# containers

./: .gitignore  .releaserc.json  CHANGELOG.md  CNPG-TSDB.code-workspace  Earthfile  README.md  VERSION  pyproject.toml  requirements.txt
.github/workflows/: cd.yml  ci.yml  watch-upstream.yml
containers/: Earthfile  versions.schema.json
containers/buildkit/: Earthfile  README.md  versions.yaml
containers/cnpg-gis-ts/: Earthfile  README.md  versions.yaml
containers/deno/: Earthfile  README.md  versions.yaml
containers/docker/: Earthfile  README.md  versions.yaml
containers/minio/: Earthfile  README.md  versions.env  versions.yaml
containers/node/: Earthfile  README.md  versions.yaml
containers/odoo/: Earthfile  README.md  versions.yaml
containers/php/: Earthfile  README.md  versions.yaml
containers/python/: Earthfile  README.md  versions.env  versions.yaml
containers/qemu-user-static/: Earthfile  README.md  versions.yaml
containers/redis/: Earthfile  README.md  versions.env  versions.yaml
containers/supabase/: Earthfile  README.md  versions.env  versions.yaml
containers/timescaledb/: Earthfile  README.md  versions.env  versions.yaml
containers/xep-python-iac/: Earthfile  README.md  versions.yaml
dev/: build.sh  common.py  main.py  utils.py
dev/cmd/: __init__.py  build.py  matrix.py  readme.py  upstream.py
dev/watchers/: __init__.py  docker.py  github.py
